// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: className css 1`] = `
".MuiFormControl-root {
  margin: 0;
  border: 0;
  display: inline-flex;
  padding: 0;
  position: relative;
  min-width: 0;
  flex-direction: column;
}
.MuiFormControl-marginNormal {
  margin-top: 16px;
  margin-bottom: 8px;
}
.MuiFormControl-marginDense {
  margin-top: 8px;
  margin-bottom: 4px;
}
.MuiFormControl-fullWidth {
  width: 100%;
}
.MuiTypography-root {
  margin: 0;
  display: block;
}
.MuiTypography-display4 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 7rem;
  font-weight: 300;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.14286em;
  margin-left: -.06em;
  letter-spacing: -.04em;
}
.MuiTypography-display3 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 3.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.30357em;
  margin-left: -.04em;
  letter-spacing: -.02em;
}
.MuiTypography-display2 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.8125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.06667em;
  margin-left: -.04em;
}
.MuiTypography-display1 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.20588em;
  margin-left: -.04em;
}
.MuiTypography-headline {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.35417em;
}
.MuiTypography-title {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.3125rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.16667em;
}
.MuiTypography-subheading {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.5em;
}
.MuiTypography-body2 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.71429em;
}
.MuiTypography-body1 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.46429em;
}
.MuiTypography-caption {
  color: rgba(0, 0, 0, 0.54);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.375em;
}
.MuiTypography-button {
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  text-transform: uppercase;
}
.MuiTypography-alignLeft {
  text-align: left;
}
.MuiTypography-alignCenter {
  text-align: center;
}
.MuiTypography-alignRight {
  text-align: right;
}
.MuiTypography-alignJustify {
  text-align: justify;
}
.MuiTypography-noWrap {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.MuiTypography-gutterBottom {
  margin-bottom: 0.35em;
}
.MuiTypography-paragraph {
  margin-bottom: 16px;
}
.MuiTypography-colorInherit {
  color: inherit;
}
.MuiTypography-colorPrimary {
  color: #3f51b5;
}
.MuiTypography-colorSecondary {
  color: rgba(0, 0, 0, 0.54);
}
.MuiTypography-colorAccent {
  color: #f50057;
}
.MuiTypography-colorError {
  color: #f44336;
}
.MuiFormControlLabel-root {
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  margin-left: -14px;
  margin-right: 16px;
  vertical-align: middle;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.MuiFormControlLabel-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}
.MuiSvgIcon-root {
  fill: currentColor;
  width: 24px;
  height: 24px;
  display: inline-block;
  transition: fill 200ms cubic-bezier(0.4, false, false.2, false) 0ms;
  user-select: none;
  flex-shrink: 0;
}
.MuiSvgIcon-colorAccent {
  color: #ff4081;
}
.MuiSvgIcon-colorAction {
  color: rgba(0, 0, 0, 0.54);
}
.MuiSvgIcon-colorContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiSvgIcon-colorDisabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiSvgIcon-colorError {
  color: #f44336;
}
.MuiSvgIcon-colorPrimary {
  color: #3f51b5;
}
.MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-wrapper {
  opacity: 1;
}
.MuiTouchRipple-wrapperLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-wrapperPulsating {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  animation: mui-ripple-pulsate 1500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
  ripple-visible: [object Object];
}
@keyframes mui-ripple-enter {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
  background: currentColor;
  border-radius: 50%;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-rippleFast {
  animation-duration: 200ms;
}
.MuiButtonBase-root {
  color: inherit;
  cursor: pointer;
  border: 0;
  padding: 0;
  display: inline-flex;
  outline: none;
  position: relative;
  appearance: none;
  align-items: center;
  user-select: none;
  border-radius: 0;
  vertical-align: middle;
  justify-content: center;
  text-decoration: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiIconButton-root {
  flex: 0 0 auto;
  width: 48px;
  color: rgba(0, 0, 0, 0.54);
  height: 48px;
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  transition: background-color 150ms cubic-bezier(0.4, false, false.2, false) 0ms;
  border-radius: 50%;
}
.MuiIconButton-colorAccent {
  color: #ff4081;
}
.MuiIconButton-colorContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiIconButton-colorPrimary {
  color: #3f51b5;
}
.MuiIconButton-colorInherit {
  color: inherit;
}
.MuiIconButton-disabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiIconButton-label {
  width: 100%;
  display: flex;
  align-items: inherit;
  justify-content: inherit;
}
.MuiIconButton-icon {
  width: 1em;
  height: 1em;
}
.MuiIconButton-keyboardFocused {
  background-color: rgba(0, 0, 0, 0.12);
}
.MuiSwitchBase-root {
  display: inline-flex;
  transition: false;
  align-items: center;
}
.MuiSwitchBase-input {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
}
.MuiCheckbox-default {
  color: rgba(0, 0, 0, 0.54);
}
.MuiCheckbox-checked {
  color: #3f51b5;
}
.MuiCheckbox-disabled {
  color: rgba(0, 0, 0, 0.26);
}
"
`;

exports[`snapshot: className html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth test-class fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      
    </span>
  </label>
</div>
`;

exports[`snapshot: false css 1`] = `""`;

exports[`snapshot: false html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: only label css 1`] = `""`;

exports[`snapshot: only label html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: read only false css 1`] = `""`;

exports[`snapshot: read only false html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root MuiFormControlLabel-disabled"
  >
    <span
      className="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default MuiSwitchBase-disabled MuiCheckbox-disabled"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={true}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: read only indeterminate css 1`] = `""`;

exports[`snapshot: read only indeterminate html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root MuiFormControlLabel-disabled"
  >
    <span
      className="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default MuiSwitchBase-disabled MuiCheckbox-disabled"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={true}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: read only true css 1`] = `""`;

exports[`snapshot: read only true html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root MuiFormControlLabel-disabled"
  >
    <span
      className="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default MuiSwitchBase-checked MuiCheckbox-checked MuiSwitchBase-disabled MuiCheckbox-disabled"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <input
          checked={true}
          className="MuiSwitchBase-input"
          disabled={true}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: true css 1`] = `""`;

exports[`snapshot: true html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default MuiSwitchBase-checked MuiCheckbox-checked"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <input
          checked={true}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: very long label css 1`] = `""`;

exports[`snapshot: very long label html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </span>
  </label>
</div>
`;

exports[`snapshot: with handlers css 1`] = `""`;

exports[`snapshot: with handlers html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      checkbox
    </span>
  </label>
</div>
`;

exports[`snapshot: without props css 1`] = `""`;

exports[`snapshot: without props html 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth fcCheckbox-root"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiButtonBase-root MuiIconButton-root MuiSwitchBase-root MuiSwitchBase-default MuiCheckbox-default"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role={undefined}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <input
          checked={false}
          className="MuiSwitchBase-input"
          disabled={false}
          name={undefined}
          onChange={[Function]}
          tabIndex={undefined}
          type="checkbox"
          value={undefined}
        />
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      
    </span>
  </label>
</div>
`;
